Remove walk-in buttons, fix category buttons, fix gap

--- a/esp/public/media/default_styles/webapp.css
+++ b/esp/public/media/default_styles/webapp.css
@@ -28,10 +28,12 @@
   padding: 0px;
   font-size: 2vh;
   width: 25%;
+  height: 7.5vh;
 }
 
 .navbar table {
   width: 100%;
+  border: .2vh solid #333;
 }
 
 .main table, th, td {
@@ -232,9 +234,10 @@
 }
 
 .header.btn {
-  margin: .5vh;
   border-radius: 1vh !important;
   font-size: 2.25vh !important;
+  width: calc(100% - 1vh);
+  height: 7.5vh;
 }
 
 .add_button {
